# fancy-calculator

./: .gitignore  Cargo.toml  README.md  build.rs
calc-ui/: CalcButton.qml  CalculatorForm.qml  CalculatorForm.ui.qml  backend.cpp  backend.hpp  calc-ui.pro  main.cpp  main.hpp  main.qml  qml.qrc
src/: calc_ui.rs  main.rs  math.rs
